--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 
 body{
+    margin: 0px;
     font-family: 'Poppins', sans-serif;
 }
 h1{
@@ -17,6 +18,14 @@ h1{
     padding-left: 5%;
 }
 .half-width img{
-    width: 100%;
-   
+    width: 90%;
+    margin-right: 5%;
+    padding: 2%;
+}
+.top-banner{
+    background-image:url("images/top-banner.png");
+}
+section{
+    height: 500px;
+    background-repeat: no-repeat;
 }
