--- a/style.css
+++ b/style.css
@@ -2,12 +2,24 @@
 body{
     margin: 0px;
     font-family: 'Poppins', sans-serif;
+    color: slategray;
 }
 h1{
     font-size: 50px;
 }
+h2{
+  font-size: 40px;
+  color:tomato;
+}
+h3{
+    font-size: 30px;
+    color:rgb(248, 100, 100);
+}
+p{
+   color: rgb(123, 123, 124);
+}
 .name-highlight{
- color:lightcoral;
+ color: salmon;
 }
 
 /*Section 1 is start */
@@ -18,9 +30,9 @@ h1{
     padding-left: 5%;
 }
 .half-width img{
-    width: 90%;
+    width: 80%;
     margin-right: 5%;
-    padding: 2%;
+    padding: 5%;
 }
 .top-banner{
     background-image:url("images/top-banner.png");
@@ -28,4 +40,15 @@ h1{
 section{
     height: 500px;
     background-repeat: no-repeat;
+    padding-bottom: 10vw;
+}
+
+/*Button part */
+.link-button{
+    text-decoration: none;
+    background-image: linear-gradient(45deg,lightcoral, lightsalmon);
+    color: white;
+    padding: 10px 20px;
+    border-radius: 5px;
+    font-weight: 700;
 }
