--- a/style.css
+++ b/style.css
@@ -8,39 +8,41 @@ h1{
     font-size: 50px;
 }
 h2{
-  font-size: 40px;
+  font-size: 35px;
   color:tomato;
+
 }
 h3{
-    font-size: 30px;
+    font-size: 25px;
     color:rgb(248, 100, 100);
 }
 p{
    color: rgb(123, 123, 124);
 }
-.name-highlight{
- color: salmon;
+.orange-highlight{
+ color: orange;
 }
 
 /*Section 1 is start */
 .half-width{
-    width: 40%;
+    width: 46%;
     float: left;
-    margin-left: 5%;
-    padding-left: 5%;
+    margin-left: 2%;
+    padding-left: 2%;
 }
 .half-width img{
-    width: 80%;
+    width: 70%;
     margin-right: 5%;
     padding: 5%;
 }
 .top-banner{
     background-image:url("images/top-banner.png");
+    padding-bottom: 8vw;
 }
 section{
     height: 500px;
     background-repeat: no-repeat;
-    padding-bottom: 10vw;
+    
 }
 
 /*Button part */
@@ -51,4 +53,35 @@ section{
     padding: 10px 20px;
     border-radius: 5px;
     font-weight: 700;
+}
+/*section 2 area */
+.dream-area{
+    background-image: url("images/dream-bg.png");
+    background-repeat: no-repeat;
+    background-position: right;
+    padding-bottom: 5vw;
+}
+#half-width{
+    width: 50%;
+    float: left;
+}
+#experience-highlight{
+    margin: 0px;
+    padding-left: 10px;
+    padding-bottom: 3vw;
+    
+}
+.single-experience{
+   padding-left: 15px;
+   box-shadow: 10px 10px 40px;
+   border-radius: 5px;
+   height: 65%;
+ 
+}
+
+.experience-area{
+background-image: url(images/exp-bg.png);
+background-repeat: no-repeat;
+background-position: left;
+
 }
